--- a/turisticos/style.css
+++ b/turisticos/style.css
@@ -1,6 +1,75 @@
 @import "node_modules/ol/ol.css";
 
-html, body {
+html,
+body {
   margin: 0;
   height: 100%;
+}
+
+.root {
+  width: 100dvw;
+  height: 100dvh;
+  background-color: #0f9;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  position: relative;
+}
+
+#map {
+  width: 100%;
+  height: 100%;
+}
+
+.layers-selector {
+  width: 240px;
+  height: auto;
+  max-height: 300px;
+  padding: 2rem;
+  background-color: #fff;
+  bottom: 1rem;
+  right: 1rem;
+  position: absolute;
+  display: flex;
+  gap:0.25rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  border-radius: 4px;
+}
+
+.layers-option span{
+  display: inline-block;
+  min-width: 200px;
+}
+.layers-option input{
+ scale:1.5;
+}
+
+.container {
+  position: absolute;
+  bottom: 2rem;
+  left: 2rem;
+}
+
+.container.show {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+
+  background: #fff;
+  animation: popup ease 0.2s;
+}
+
+@keyframes popup {
+  from {
+    opacity: 0;
+    width: 1px;
+    height: 1px;
+  }
+  to {
+    opacity: 1;
+    width: 300px;
+    height: 300px;
+  }
 }
