--- a/turisticos/style.css
+++ b/turisticos/style.css
@@ -3,12 +3,32 @@
 html,
 body {
   margin: 0;
+  padding: 0;
   height: 100%;
 }
 
+:root{
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
+img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
 .root {
-  width: 100dvw;
+  width: 100%;
+  max-width: 1600px;
+  margin: 0 auto;
   height: 100dvh;
+  overflow: hidden;
   background-color: #0f9;
   display: flex;
   flex-direction: column;
@@ -40,7 +60,7 @@ body {
 
 .layers-option span{
   display: inline-block;
-  min-width: 200px;
+  min-width: 220px;
 }
 .layers-option input{
  scale:1.5;
@@ -50,15 +70,47 @@ body {
   position: absolute;
   top: 2rem;
   left: 2rem;
+  overflow: hidden;
+  visibility: 0;
+  width: 0;
+  height: 0;
 }
 
 .container.show {
+  padding: 0;
+  margin: 0;
   width: 300px;
   height: 300px;
+  visibility: 1;
   border-radius: 50%;
-
   background: #fff;
   animation: popup ease 0.2s;
+  border: 4px solid #333;
+}
+
+.container.show #info-title{
+  background: #fff;
+  color: #333;
+  text-align: center;
+  word-wrap: pretty;
+  position:absolute ;
+  z-index: 60;
+  border-radius: 4px;
+  padding: 0px 8px;
+}
+
+.container.show #info-title{
+  display: block;
+  transform: translate(-50%,-50%);
+  top: 15%;
+  left: 50%;
+}
+
+
+#download-btn{
+  left: 1rem;
+  bottom: 1rem;
+  position: absolute;
 }
 
 @keyframes popup {
